fix(establishments): filter intercommunalities by administrative kind
