# packages/models/src/EstablishmentFiltersDTO.ts
@@ -6,6 +6,10 @@ export type EstablishmentFiltersDTO = Partial<
   id?: EstablishmentDTO['id'][];
   name?: EstablishmentDTO['name'];
   kind?: EstablishmentDTO['kind'][];
+  /**
+   * Filter by the administrative kind imported from the Gold source.
+   */
+  kindAdmin?: string[];
   siren?: EstablishmentDTO['siren'][];
   /**
    * Filter on active establishments (having at least one user)
